--- a/package.json
+++ b/package.json
@@ -13,44 +13,45 @@
   "dependencies": {
     "axios": "^0.16.1",
     "dplayer": "^1.1.4",
-    "hls.js": "^0.7.6",
+    "hls.js": "^0.7.8",
     "material-design-icons": "^3.0.1",
     "material-image": "^0.2.5",
-    "muse-ui": "^2.0.2",
+    "muse-ui": "^2.0.3",
+    "query-string": "^4.3.4",
     "vue": "^2.2.1",
     "vue-awesome-swiper": "^2.4.0",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.0",
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.3.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "opn": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^1.3.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.2",
     "ora": "^1.2.0",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
@@ -60,11 +61,11 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.0.4",
+    "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.8.1",
+    "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
