--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "query-string": "^4.3.4",
     "vue": "^2.2.1",
     "vue-awesome-swiper": "^2.4.0",
+    "vue-flickity": "^1.0.7",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
   },
