--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "dplayer": "^1.1.4",
+    "dplayer": "1.1.4",
+    "flickity": "^2.0.8",
     "hls.js": "^0.7.9",
     "material-design-icons": "^3.0.1",
     "material-image": "^0.2.5",
     "muse-ui": "^2.0.3",
     "query-string": "^4.3.4",
-    "vue": "^2.2.1",
-    "vue-flickity": "^1.0.7",
-    "vue-router": "^2.3.0",
-    "vuex": "^2.2.1"
+    "vue": "^2.3.4",
+    "vue-router": "^2.5.3",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
@@ -36,12 +36,12 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
+    "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.3",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.3.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
@@ -52,7 +52,7 @@
     "http-proxy-middleware": "^0.17.4",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
+    "ora": "^1.3.0",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "rimraf": "^2.6.1",
@@ -60,7 +60,7 @@
     "shelljs": "^0.7.7",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.5.9",
     "vue-loader": "^12.2.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
