--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "dplayer": "1.1.4",
+    "babel-runtime": "^6.25.0",
+    "dplayer": "^1.9.1",
     "flickity": "^2.0.8",
     "hls.js": "^0.7.9",
     "material-design-icons": "^3.0.1",
     "material-image": "^0.2.5",
-    "muse-ui": "^2.0.3",
+    "muse-ui": "^2.1.0",
     "query-string": "^4.3.4",
     "vue": "^2.3.4",
     "vue-router": "^2.5.3",
