--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "query-string": "^4.3.4",
     "vue": "^2.3.4",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "webtorrent": "^0.98.19"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
