Basic commit  - add common files  - admin pages basically completed

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Quasar App",
   "version": "0.0.1",
   "description": "A Quasar App",
-  "author": "Your Name <your@email.com>",
+  "author": "F-loat <chaimaoyuan@foxmail.com>",
   "scripts": {
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
