--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
+    "dplayer": "^1.16.0",
     "lrz": "^4.9.40",
     "material-image": "^0.2.5",
     "quasar-extras": "^0.0.8",
