--- a/package.json
+++ b/package.json
@@ -11,43 +11,44 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.17.0",
     "babel-runtime": "^6.25.0",
     "dplayer": "^1.16.0",
     "lrz": "^4.9.40",
     "material-image": "^0.2.5",
     "quasar-extras": "^0.0.8",
-    "quasar-framework": "^0.14.3",
-    "vue": "~2.3.4",
-    "vue-router": "^2.7.0",
-    "vuelidate": "^0.5.0",
-    "vuex": "^2.4.0"
+    "quasar-framework": "^0.14.7",
+    "vue": "^2.5.3",
+    "vue-router": "^3.0.1",
+    "vuelidate": "^0.6.1",
+    "vuex": "^3.0.1",
+    "webtorrent": "^0.98.20"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "colors": "^1.1.2",
-    "connect-history-api-fallback": "^1.1.0",
+    "connect-history-api-fallback": "^1.4.0",
     "css-loader": "^0.28.0",
     "es6-promise": "^4.1.1",
-    "eslint": "^4.4.1",
+    "eslint": "^4.10.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
@@ -55,7 +56,7 @@
     "json-loader": "^0.5.7",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "1.x.x",
     "progress-bar-webpack-plugin": "^1.10.0",
     "pug": "^2.0.0-rc.4",
     "pug-loader": "^2.3.0",
@@ -63,13 +64,13 @@
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.7",
-    "vue-loader": "~12.2.2",
+    "url-loader": "^0.6.2",
+    "vue-loader": "^13.4.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "~2.3.4",
-    "webpack": "^3.5.2",
+    "vue-template-compiler": "^2.5.3",
+    "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "webpack-hot-middleware": "^2.20.0",
+    "webpack-merge": "^4.1.1"
   }
 }
